Compability fix after PROJECT NAME change, helping the project to be alive and understood by repast framework after a rename operation

--- a/Repast.settings
+++ b/Repast.settings
@@ -10,7 +10,7 @@
     <string>SettingsRegistryId</string>
     <string>Repast.registry</string>
     <string>LastLoadedScenario</string>
-    <string>C:\RepastSimphony-2.2\workspace\HyipSimulator\HyipSimulator.rs</string>
+    <string>C:\RepastSimphony-2.2\workspace\HyipGame\HyipGame.rs</string>
     <string>SettingsFileName</string>
     <string>Repast.settings</string>
   </hashtable>
